updating css and fix search to all remove whitespace if accidently user copy and paste

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -31,5 +31,5 @@
 }
 
 .content {
-  min-height: calc(100vh - 136px);
+  min-height: calc(100vh - 125px);
 }
